--- a/.github/workflows/tests-contributors.yml
+++ b/.github/workflows/tests-contributors.yml
@@ -37,30 +37,53 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Check if branch allows running tests
+        id: check_target_branch
+        run: |
+          TARGET=${{ fromJson(steps.pr_api.outputs.data).base.ref }}
+          [[ $TARGET =~ (master|f34-(devel|release)) ]] && echo "::set-output name=allowed_ref::true"
+
     outputs:
       allowed_user: ${{ steps.check_user_perm.outputs.allowed_user }}
+      allowed_ref: ${{ steps.check_target_branch.outputs.allowed_ref }}
       base_ref: ${{ fromJson(steps.pr_api.outputs.data).base.ref }}
       sha: ${{ fromJson(steps.pr_api.outputs.data).head.sha }}
 
-  unit-tests-master:
+  unit-tests:
     needs: pr-info
-    if: needs.pr-info.outputs.base_ref == 'master' && needs.pr-info.outputs.allowed_user == 'true'
+    if: needs.pr-info.outputs.allowed_ref == 'true' && needs.pr-info.outputs.allowed_user == 'true'
     runs-on: ubuntu-20.04
     timeout-minutes: 30
     strategy:
       fail-fast: false
-      matrix:
-        # empty = release that corresponds to current branch name
-        release: ['', 'eln']
+        # * Don't forget to copypaste also the same matrix below in rpm tests!
+        # * Replace current branch in "release" with empty string. This makes name of the check for
+        #   the current branch always have the same name, so that it can be added to required
+        #   checks.
+        # * For various branches, comment out what does not apply:
+        #     on -devel, run everything
+        #     on -release, only -release
+        #     on master, only master and ELN
+        release: [master, eln, '', f34-release]
         include:
+          - release: master
+            target_branch: 'master'
+            ci_tag: 'master'
           - release: eln
-            name-postfix: ' (eln)'
+            target_branch: 'master'
+            ci_tag: 'eln'
             build-args: '--build-arg=image=quay.io/fedoraci/fedora:eln-x86_64'
+          - release: ''
+            target_branch: 'f34-devel'
+            ci_tag: 'f34-devel'
+          - release: f34-release
+            target_branch: 'f34-release'
+            ci_tag: 'f34-release'
     env:
-      CI_TAG: '${{ matrix.release }}'
+      CI_TAG: '${{ matrix.ci_tag }}'
       CONTAINER_BUILD_ARGS: '${{ matrix.build-args }}'
-      STATUS_NAME: 'unit-tests${{ matrix.name-postfix }}'
-      TARGET_BRANCH_NAME: origin/master
+      STATUS_NAME: 'unit-tests (${{ matrix.release }})'
+      TARGET_BRANCH_NAME: 'origin/${{ matrix.target_branch }}'
 
     steps:
       # we post statuses manually as this does not run from a pull_request event
@@ -82,7 +105,7 @@ jobs:
           ref: ${{ needs.pr-info.outputs.sha }}
           fetch-depth: 0
 
-      - name: Rebase to current master
+      - name: Rebase to current ${{ env.TARGET_BRANCH_NAME }}
         run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
@@ -112,7 +135,7 @@ jobs:
         if: always()
         uses: actions/upload-artifact@v2
         with:
-          name: 'logs${{ matrix.name-postfix }}'
+          name: 'logs (${{ matrix.release }})'
           path: test-logs/*
 
       - name: Set result status
@@ -126,25 +149,35 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-  rpm-tests-master:
+  rpm-tests:
     needs: pr-info
-    if: needs.pr-info.outputs.base_ref == 'master' && needs.pr-info.outputs.allowed_user == 'true'
+    if: needs.pr-info.outputs.allowed_ref == 'true' && needs.pr-info.outputs.allowed_user == 'true'
     runs-on: ubuntu-20.04
     timeout-minutes: 30
     strategy:
       fail-fast: false
       matrix:
-        # empty = release that corresponds to current branch name
-        release: ['', 'eln']
+        # For matrix details, see comments for the unit tests above.
+        release: [master, eln, '', f34-release]
         include:
+          - release: master
+            target_branch: 'master'
+            ci_tag: 'master'
           - release: eln
-            name-postfix: ' (eln)'
+            target_branch: 'master'
+            ci_tag: 'eln'
             build-args: '--build-arg=image=quay.io/fedoraci/fedora:eln-x86_64'
+          - release: ''
+            target_branch: 'f34-devel'
+            ci_tag: 'f34-devel'
+          - release: f34-release
+            target_branch: 'f34-release'
+            ci_tag: 'f34-release'
     env:
-      CI_TAG: '${{ matrix.release }}'
+      CI_TAG: '${{ matrix.ci_tag }}'
       CONTAINER_BUILD_ARGS: '${{ matrix.build-args }}'
-      STATUS_NAME: 'rpm-tests${{ matrix.name-postfix }}'
-      TARGET_BRANCH_NAME: origin/master
+      STATUS_NAME: 'rpm-tests (${{ matrix.release }})'
+      TARGET_BRANCH_NAME: 'origin/${{ matrix.target_branch }}'
 
     steps:
       - name: Create in-progress status
@@ -164,7 +197,7 @@ jobs:
           ref: ${{ needs.pr-info.outputs.sha }}
           fetch-depth: 0
 
-      - name: Rebase to current master
+      - name: Rebase to current ${{ env.TARGET_BRANCH_NAME }}
         run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
@@ -181,7 +214,7 @@ jobs:
         if: always()
         uses: actions/upload-artifact@v2
         with:
-          name: 'logs-rpm-test${{ matrix.name-postfix }}'
+          name: 'logs-rpm-test (${{ matrix.release }})'
           path: test-logs/*
 
       - name: Set result status
